--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,21 @@
                 "allowTrailingCommas": true
             }
         }
-    ]
+    ],
+    "files.exclude": {
+        "**/.git": true,
+        "**/.svn": true,
+        "**/.hg": true,
+        "**/CVS": true,
+        "**/.DS_Store": true,
+        "**/Thumbs.db": true,
+        "src/tokenColors/typescript.js": true,
+    },
+    "search.exclude": {
+        "**/node_modules": true,
+        "**/bower_components": true,
+        "**/*.code-search": true,
+        "**/themes": true,
+        "src/tokenColors/typescript.js": true,
+    }
 }
