--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,14 @@
             }
         }
     ],
+    "search.exclude": {
+        "**/node_modules": true,
+        "**/bower_components": true,
+        "**/*.code-search": true,
+        "**/themes": true,
+        "src/tokenColors/typescript.js": true,
+        "src/tokenColors/html.js": true,
+    },
     "files.exclude": {
         "**/.git": true,
         "**/.svn": true,
@@ -16,13 +24,6 @@
         "**/CVS": true,
         "**/.DS_Store": true,
         "**/Thumbs.db": true,
-        "src/tokenColors/typescript.js": true,
-    },
-    "search.exclude": {
-        "**/node_modules": true,
-        "**/bower_components": true,
-        "**/*.code-search": true,
-        "**/themes": true,
-        "src/tokenColors/typescript.js": true,
+        "**/gen_*.js": true
     }
 }
