--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
-.DS_store
-Icon?
-**/tags
-node_modules/**
+**/node_modules/
 
 **/obj/
+**/bin/
 
-**/gen_*.js
-semanticTokenColors.js
-tokenColors.js
+themes/**
