--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "dark-theme",
     "displayName": "IrishBruse's Dark Theme",
     "description": "My custom dark theme influenced by dark-plus-theme.",
-    "version": "1.4.4",
+    "version": "1.5.0",
     "author": "IrishBruse",
     "publisher": "IrishBruse",
     "license": "MIT",
@@ -11,21 +11,9 @@
         "type": "git",
         "url": "https://github.com/IrishBruse/IrishBruse-Dark-Theme"
     },
-    "watch": {
-        "build": {
-            "patterns": "src",
-            "extensions": "js",
-            "ignore": [
-                "src/tokenColors/gen_*.js"
-            ]
-        }
-    },
     "scripts": {
-        "prebuild": "node codegen.js",
-        "build": "node index.js",
-        "prepublish": "start https://dev.azure.com/econn50/_usersSettings/tokens",
-        "publish": "vsce publish",
-        "watch": "npm-watch"
+        "dev": "nodemon --watch ./src/ --watch ./utils/ ./utils/generate.js",
+        "parser": "node ./utils/parser.js"
     },
     "engines": {
         "vscode": "^1.60.0"
@@ -53,8 +41,7 @@
         ]
     },
     "devDependencies": {
-        "npm-watch": "^0.11.0",
-        "write-json-file": "^2.2.0"
+        "nodemon": "^2.0.16"
     },
     "galleryBanner": {
         "color": "#8a76cc",
