--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,19 +2,13 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "dev",
+            "label": "Watch Compile",
             "type": "shell",
-            "command": "npm run dev",
+            "command": "tsx watch Compile.mts",
             "problemMatcher": [],
             "runOptions": {
-                "runOn": "folderOpen"
+                "runOn": "folderOpen",
             }
-        },
-        {
-            "label": "parser",
-            "type": "shell",
-            "command": "npm run parser",
-            "problemMatcher": []
         }
     ]
 }
