Improve more colors

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,9 +8,7 @@
             "request": "launch",
             "preLaunchTask": "",
             "runtimeExecutable": "${execPath}",
-            "args": [
-                "--extensionDevelopmentPath=${workspaceRoot}"
-            ]
+            "args": ["--extensionDevelopmentPath=${workspaceRoot}"]
         }
     ]
 }
