More colors dont

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,7 +8,8 @@
             "options": {
                 "cwd": "src/"
             },
-            "problemMatcher": []
+            "problemMatcher": [],
+            "runOptions": { "runOn": "folderOpen" }
         }
     ]
 }
